moved plan difference method back to model; cleaned translation files

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,30 +11,27 @@ en:
     failure:
       problem_processing_transaction: "There was a problem processing this transaction."
       unauthorized: "Unauthorized"
-    payment:
-      cvc: "CVC"
-      expiration: "Expiration (MM/YYYY)"
-      card_number: "Card Number"
-      save_billing_info: "Save Billing Information"
-      upgrade_account: "Upgrade Your Account"
-      cancel: "Cancel"
-      update_payment_information: "Update Your Payment Information"
-      payment_information: "Payment Information"
-      card_on_file_with_last_four: "The card on file for your account ends with %{last_four}."
     plan_intervals:
       month: "month"
       year: "year"
       week: "week"
       6month: "half-year"
       3month: "quarter"
-    pricing:
-      which_plan_is_best: "What Plan Is Best For You?"
-      free_trial_for_days: "%{days}-day Free Trial"
-      plan_downgrade: "Downgrade"
-      plan_selected: "Selected"
-      plan_upgrade: "Upgrade"
-      sign_up: "Sign up"
+    plan_difference:
+      downgrade: "Downgrade"
+      selected: "Selected"
       start_trial: "Start Trial"
+      upgrade: "Upgrade"
+    payment:
+      cancel: "Cancel"
+      card_number: "Card Number"
+      card_on_file_with_last_four: "The card on file for your account ends with %{last_four}."
+      cvc: "CVC"
+      expiration: "Expiration (MM/YYYY)"
+      payment_information: "Payment Information"
+      save_billing_info: "Save Billing Information"
+      upgrade_account: "Upgrade Your Account"
+      update_payment_information: "Update Your Payment Information"
     social_proof:
       testimonial1:
         person: "Person at Place"
@@ -50,9 +47,12 @@ en:
       cancel_your_subscription_note_html: "You can also %{link}."
       choose_other_plan: "Choose Another Plan"
       choose_plan: "Choose A Plan"
-      start_trial: "Start Your Free Trial"
-      upgrade_your_account: "Upgrade Your Account"
-      subscribed: "You're Subscribed!"
-      subscribed_to_plan: "You're currently subscribed to the %{plan} plan."
+      free_trial_for_days: "%{days}-day Free Trial"
       no_subscription: "No Subscription"
       not_subscribed_to_plan: "You are not subscribed to a paid plan."
+      sign_up: "Sign up"
+      start_trial: "Start Your Free Trial"
+      subscribed: "You're Subscribed!"
+      subscribed_to_plan: "You're currently subscribed to the %{plan} plan."
+      upgrade_your_account: "Upgrade Your Account"
+      which_plan_is_best: "What Plan Is Best For You?"
